# ChangeLog for x11-drivers/nvidia-drivers
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.331 2012/04/11 02:42:07 cardoe Exp $

  11 Apr 2012; Doug Goldstein <cardoe@gentoo.org>
  -nvidia-drivers-275.09.07.ebuild, -nvidia-drivers-275.43.ebuild:
  Remove older 275.x series

  06 Apr 2012; Doug Goldstein <cardoe@gentoo.org> files/nvidia.udev-rule:
  Break the udev rule into two pieces because a user on bug #376527 had a
  problem with the combined rule on udev-171-r5. It worked fine after he
  recompiled udev but obviously since there was an issue we should just use it
  broken out. bug #376527

  06 Apr 2012; Doug Goldstein <cardoe@gentoo.org> nvidia-drivers-295.33.ebuild:
  Script needs to be executable

  06 Apr 2012; Doug Goldstein <cardoe@gentoo.org> nvidia-drivers-295.33.ebuild,
  +files/nvidia.udev-rule, +files/nvidia-udev.sh:
  Add support for creating device nodes for NVIDIA graphics cards when not
  using X. Users of CUDA only specificially need this. Work for this done by
  Rick Farina <sidhayn@gmail.com> bug #376527

  26 Mar 2012; Doug Goldstein <cardoe@gentoo.org> nvidia-drivers-295.33.ebuild:
  ebuild updates that were meant to be committed part of the original commit.

*nvidia-drivers-295.33 (23 Mar 2012)

  23 Mar 2012; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-drivers-295.33.ebuild:
  Version bump. Move the binaries from /usr/bin to /opt/bin.

  21 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
  nvidia-drivers-295.20-r1.ebuild:
  Use $OUTPUT instead of $SOURCES for the generated headers wrt #408841,
  Comment #10 by Ingo Kemper

  21 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
  nvidia-drivers-295.20-r1.ebuild:
  Fix building with Linux 3.3.x wrt #408841

  20 Mar 2012; Agostino Sarubbo <ago@gentoo.org>
  nvidia-drivers-295.20-r1.ebuild:
  Stable for amd64, wrt bug #408905

  19 Mar 2012; Doug Goldstein <cardoe@gentoo.org>